# misis2024s-23-04-feigenberg-m-i

./: .gitignore  CMakeLists.txt  README.md  codeforces.id  status.md
prj.app/: CMakeLists.txt
prj.app/roborun/: CMakeLists.txt  roborun.cpp
prj.app/timing-q/: CMakeLists.txt
prj.codeforces/: 0001a.cpp  0041a.cpp  0058a.cpp  0071a.cpp  0118a.cpp  0148a.cpp  0268a.cpp  0610a.cpp  0723a.cpp  0750a.cpp  0977a.cpp  1102a.cpp  1328a.cpp  1703a.cpp  1704a.cpp  1846a.cpp  1849a.cpp  1894a.cpp  1915c.cpp  1917a.cpp  1918a.cpp  1925a.cpp  1928a.cpp  1931a.cpp  1934a.cpp  1935a.cpp  1937a.cpp  1946a.cpp  1957a.cpp  1965a.cpp  1972a.cpp  1973a.cpp  1974a.cpp  CMakeLists.txt
prj.cv/: CMakeLists.txt
prj.cw/: CMakeLists.txt  pet_project.cpp
prj.lab/: CMakeLists.txt
prj.lab/Complex/: CMakeLists.txt  Complex.hpp
prj.lab/DynArr/: CMakeLists.txt  DynArr.cpp
prj.lab/Rational/: CMakeLists.txt
prj.lab/StackArr/: CMakeLists.txt  StackArr.cpp  StackArr.hpp
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.cpp  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.test/: CMakeLists.txt  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_rational.cpp  test_stackarr.cpp  test_stackarrt.cpp  test_stacklst.cpp
